# big_data_homework

hw1/: README.md  commands  dune  mapper_mean.py  mapper_var.py  reducer_mean.py  reducer_var.py  res.txt
hw2/: hw2
hw3/: README.md  build.sbt  create_df.ipynb  output.csv  test.csv  train.csv
hw3/src/main/scala/linReg/: Main.scala  entitis.scala  linearRegression.scala
hw4/: README.md  build.sbt
hw4/src/main/scala/tf_idf/: SparkWordCount.scala  entitis.scala
