За  неделю  до  отъезда на Арраки, когда предотьездная суета
достигла апогея, к матери Пола пришла старуха.
   Ночь в замке Каладан была жаркой, но груда камней, служившая
домом уже двадцати шести поколениям семьи Атридесов, дышала той
приятной прохладой, которую  она  всегда  излучала  к  перемене
погоды.
   Старуха  открыла боковую дверь, прошла под сводом коридора к
комнате Пола и, заглянув в нее, стала рассматривать лежащего  в
постели мальчика.
   При  затененном  свете  лампы,  висящей  под самым потолком,
разбуженный мальчик различил маячившую у двери грузную  женскую
фигуру, за спиной которой виднелась его мать.
   Старуха  более  всего  походила  на  ведьму:  волосы  -- как
спутанная  паутина,  темное  лицо,  глаза  сверкающие,   словно
драгоценные камни...
   -- Не мал ли он для своего возраста? -- спросила старуха. Ее
голос был хриплым и гнусавым.
   --  Вы ведь знаете, что в нашей семье взрослеют поздно. Ваше
преподобие, -- ответила мать Пола своим мягким контральто.
   -- Как же, слышала, -- прохрипела старуха.  --  Но  ему  уже
пятнадцать лет.
   -- Да, Ваше преподобие.
   --   Он  проснулся  и  слушает  нас,  маленький  хитрец,  --
хихикнула старуха. --  Но  хитрость  как  раз  и  нужна  нашему
королевству. И если он действительно Квизатц Хедерах, тогда...
   Пол  приоткрыл  глаза.  Два  по-птичьи  ярких овала -- глаза
старухи, -- казалось, росли и  увеличивались,  проникая  ему  в
душу.
   --   Спи  спокойно,  --  сказала  старуха,  --  завтра  тебе
понадобятся все твои силы и  способности  для  встречи  с  моим
Гомом Джаббаром.
   И она ушла, оттолкнув мать Пола и с шумом захлопнув за собой
дверь.  Разбуженный  мальчик лежал и думал о том, кто это такой
-- Гом Джаббар.
   Из всего того,  свидетелем  чего  он  случайно  стал,  самым
странным  для него было поведение старухи: она обращалась с его
матерью, как со служанкой, а не как с  леди  Бене  Гессерит  --
матерью  наследника  герцога  Лето.  "Может,  Гом Джаббар имеет
какое-то отношение к Арраки?" -- размышлял Пол.
